--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
+body {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .top-container {
   background-color: #eeeeee;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 20px 5px 20px 5px;
+}
+
+.main-title {
+  margin: 10px;
+  font-size: 20px;
+}
+
+.main-description {
+  margin: 5px;
+}
+
+.banner {
+  background-color: #fff;
+  margin: 10px;
+}
+
+.banner-text {
+  padding: 5px;
+}
+
+.timeline-title {
+  padding: 30px;
+}
+ul {
+  list-style-position: inside;
+  text-align: center;
 }
